--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,9 +6,11 @@
     font-style: normal;
     /* margin: 0; */
 }
-/* body{
-    margin: 0px;
-} */
+body{
+    margin: 0;
+    border: 0;
+    padding: 0;
+}
 /* shared styles */
 .display-flex{
     display: flex;
